--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,40 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_color"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="244dp"
-        android:layout_height="43dp"
+        android:layout_width="413dp"
+        android:layout_height="60dp"
+        android:background="#C8C28EFF"
+        android:defaultFocusHighlightEnabled="true"
         android:text="Convertidor de temperatura"
+        android:textColor="@color/black"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="200dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
+        android:addStatesFromChildren="true"
+        android:background="#FFFFFF"
+        android:dropDownWidth="wrap_content"
+        android:outlineSpotShadowColor="#000000"
+        android:spinnerMode="dropdown"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.284" />
+        app:layout_constraintVertical_bias="0.282" />
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
+        android:hint="Ingrese valor"
         android:inputType="text"
         android:minHeight="48dp"
-        android:text="Valor"
+        android:textColorHighlight="@color/black"
+        android:textColorHint="#B3B1B1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -49,7 +64,9 @@
         android:id="@+id/textView"
         android:layout_width="127dp"
         android:layout_height="49dp"
-        android:text="Resultado"
+        android:background="#FFFFFF"
+        android:hint="Resultado"
+        android:textColorHint="#B3B1B1"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,9 +102,13 @@
         android:id="@+id/textView2"
         android:layout_width="229dp"
         android:layout_height="36dp"
+        android:autoSizeTextType="uniform"
+        android:background="#FFFFFF"
         android:scrollbarSize="8dp"
         android:text="Selecciona la operación:"
+        android:textColor="@color/black"
         android:textSize="18sp"
+        app:barrierMargin="@dimen/cardview_compat_inset_shadow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
